fixed the layout issue with grid

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,8 @@ body {
 }
 
 .pageBackground {
+  display: grid;
+  grid-template-columns: 20% 60% 20%;
   height: auto;
   min-height: 100%;
   background-color: #e3d9cf;
@@ -27,13 +29,9 @@ body {
 }
 
 .pageShaper {
-  height: auto;
-  min-height: 100%;
+  grid-column: 2;
+  height: 100%;
   background-color: white;
-  margin-left: 20%;
-  margin-right: 20%;
-  display: flex;
-  flex-direction: column;
 }
 
 a {
